# eRadio

./: .gitignore  CMakeLists.txt  README  README.md  eradio.sublime-project  meson.build
data/: com.dreamdevel.eradio.appdata.xml  com.dreamdevel.eradio.desktop  com.github.dreamdevel.eradio.appdata.xml  com.github.dreamdevel.eradio.appdata.xml.in  com.github.dreamdevel.eradio.desktop  com.github.dreamdevel.eradio.desktop.in  com.github.dreamdevel.eradio.gresource.xml  eradio.desktop  meson.build
debian/: changelog  control  copyright  rules
po/: CMakeLists.txt  LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  com.github.dreamdevel.eradio.pot  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  (+159 more)
po/extra/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+156 more)
schemas/: com.dreamdevel.eradio.gschema.xml  com.github.dreamdevel.eradio.gschema.xml  org.dreamdev.eradio.gschema.xml
src/: Config.vala.in  Error.vala  Main.vala  PackageManager.vala  PlaybackStatus.vala  Radio.vala  asx_decoder.vala  config.vala  config.vala.cmake  database.vala  error.vala  error_dialog.vala  extract_dialog.vala  genre.vala  m3u_decoder.vala  main.vala  main_window.vala  media_key_listener.vala  meson.build  mpris.vala  package_manager.vala  progress_dialog.vala  radio.vala  settings.vala  station.vala  station_dialog.vala  station_list.vala  station_selection_list.vala  stations.vala  stream_player.vala
src/Core/: Database.vala  MPRIS.vala  MediaKeyListener.vala  Notifier.vala  Player.vala  PlayerHelper.vala  Settings.vala  WidgetManager.vala
src/Core/DatabaseModels/: GenreModel.vala  StationModel.vala  StationsGenresModel.vala
src/Core/PlayerDecoders/: ASXDecoder.vala  M3UDecoder.vala  PLSDecoder.vala
src/Enums/: ListStoreFilterType.vala  PlayerStatus.vala  player_status.vala
src/Models/: Genre.vala  Station.vala  WebRadio.vala
src/UserInterface/Dialogs/: AddStationDialog.vala  EditStationDialog.vala  ErrorDialog.vala  ImportProgressDialog.vala  ProgressDialog.vala  StationDialog.vala
src/UserInterface/Menus/: ApplicationMenu.vala  StationsTreeViewContextMenu.vala
src/UserInterface/Others/: FileChooserCreator.vala
src/UserInterface/Views/: StationsListView.vala  WelcomeView.vala
src/UserInterface/Widgets/: DiscoverBox.vala  GenresListStore.vala  GenresTreeView.vala  GenresTreeViewScrollable.vala  GenresTreeViewToolbar.vala  HeaderBar.vala  LevelBar.vala  MainStack.vala  SideBar.vala  SideBarExpandableItem.vala  StationsListStore.vala  StationsTreeView.vala  StationsTreeViewScrollable.vala  TopToolbar.vala  ViewStack.vala
src/UserInterface/Windows/: MainWindow.vala
tools/: build  build_from_sublime  dev-shell  install-app  install-deps  install-deps-ubuntu  run
