sources = files(
    'Main.vala',
    'Radio.vala',
    'Error.vala',
    'PackageManager.vala',

    'Enums/PlayerStatus.vala',
    'Enums/ListStoreFilterType.vala',

    'Models/Genre.vala',
    'Models/Station.vala',
    'Models/WebRadio.vala',

    'Core/Database.vala',
    'Core/Player.vala',
    'Core/PlayerHelper.vala',
    'Core/MPRIS.vala',
    'Core/MediaKeyListener.vala',
    'Core/Notifier.vala',
    'Core/Settings.vala',
    'Core/DatabaseModels/GenreModel.vala',
    'Core/DatabaseModels/StationModel.vala',
    'Core/DatabaseModels/StationsGenresModel.vala',
    'Core/PlayerDecoders/M3UDecoder.vala',
    'Core/PlayerDecoders/PLSDecoder.vala',
    'Core/PlayerDecoders/ASXDecoder.vala',
    'Core/WidgetManager.vala',

    'UserInterface/Menus/ApplicationMenu.vala',
    'UserInterface/Menus/StationsTreeViewContextMenu.vala',

    'UserInterface/Views/WelcomeView.vala',
    'UserInterface/Views/StationsListView.vala',

    'UserInterface/Widgets/HeaderBar.vala',
    'UserInterface/Widgets/SideBar.vala',
    'UserInterface/Widgets/ViewStack.vala',
    'UserInterface/Widgets/StationsListStore.vala',
    'UserInterface/Widgets/GenresListStore.vala',
    'UserInterface/Widgets/StationsTreeView.vala',
    'UserInterface/Widgets/StationsTreeViewScrollable.vala',
    'UserInterface/Widgets/GenresTreeView.vala',
    'UserInterface/Widgets/GenresTreeViewScrollable.vala',
    'UserInterface/Widgets/GenresTreeViewToolbar.vala',
    'UserInterface/Widgets/SideBarExpandableItem.vala',
    'UserInterface/Widgets/LevelBar.vala',
    'UserInterface/Widgets/DiscoverBox.vala',
    'UserInterface/Widgets/MainStack.vala',

    'UserInterface/Dialogs/StationDialog.vala',
    'UserInterface/Dialogs/AddStationDialog.vala',
    'UserInterface/Dialogs/EditStationDialog.vala',
    'UserInterface/Dialogs/ErrorDialog.vala',
    'UserInterface/Dialogs/ProgressDialog.vala',
    'UserInterface/Dialogs/ImportProgressDialog.vala',

    'UserInterface/Others/FileChooserCreator.vala',

    'UserInterface/Windows/MainWindow.vala'
)